--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,3 @@
-grailsVersion=5.0.0-RC4
-projectVersion=5.0.7-SNAPSHOT
-grailsGradlePluginVersion=4.0.11-3
+projectVersion=2022.0.0-SNAPSHOT
+graceVersion=2021.0.1
+groovyVersion=3.0.11
