--- a/features/geb2/feature.yml
+++ b/features/geb2/feature.yml
@@ -4,16 +4,16 @@ build:
         - com.github.erdi.webdriver-binaries
 dependencies:
     - scope: build
-      coords: gradle.plugin.com.github.erdi.webdriver-binaries:webdriver-binaries-gradle-plugin:2.6
+      coords: com.github.erdi.webdriver-binaries:3.2
     - scope: testCompile
       coords: org.grails.plugins:geb
     - scope: testCompile
-      coords: org.seleniumhq.selenium:selenium-remote-driver:4.0.0
+      coords: org.seleniumhq.selenium:selenium-remote-driver:4.16.1
     - scope: testCompile
-      coords: org.seleniumhq.selenium:selenium-api:4.0.0
+      coords: org.seleniumhq.selenium:selenium-api:4.16.1
     - scope: testCompile
-      coords: org.seleniumhq.selenium:selenium-support:4.0.0
+      coords: org.seleniumhq.selenium:selenium-support:4.16.1
     - scope: testRuntime
-      coords: org.seleniumhq.selenium:selenium-chrome-driver:4.0.0
+      coords: org.seleniumhq.selenium:selenium-chrome-driver:4.16.1
     - scope: testRuntime
-      coords: org.seleniumhq.selenium:selenium-firefox-driver:4.0.0
+      coords: org.seleniumhq.selenium:selenium-firefox-driver:4.16.1
