--- a/features/hibernate5/feature.yml
+++ b/features/hibernate5/feature.yml
@@ -1,11 +1,11 @@
 description: Adds GORM for Hibernate 5 to the project
 dependencies:
     - scope: build
-      coords: 'org.grails.plugins:hibernate5:7.2.2'
+      coords: 'org.graceframework.plugins:hibernate5:2022.0.0'
     - scope: compile
-      coords: "org.grails.plugins:hibernate5"
+      coords: "org.graceframework.plugins:hibernate5"
     - scope: compile
-      coords: "org.hibernate:hibernate-core:5.6.5.Final"
+      coords: "org.hibernate:hibernate-core:5.6.15.Final"
     - scope: runtime
       coords: 'org.glassfish.web:el-impl:2.2.1-b05'
     - scope: runtime
