--- a/features/geb2/feature.yml
+++ b/features/geb2/feature.yml
@@ -4,7 +4,7 @@ build:
         - com.github.erdi.webdriver-binaries
 dependencies:
     - scope: build
-      coords: com.github.erdi.webdriver-binaries:3.2
+      coords: com.github.erdi:webdriver-binaries-gradle-plugin:3.2
     - scope: testCompile
       coords: org.grails.plugins:geb
     - scope: testCompile
