--- a/skeleton/gradle.properties
+++ b/skeleton/gradle.properties
@@ -1,4 +1,4 @@
-grailsVersion=@grails.version@
+graceVersion=@grails.version@
 groovyVersion=@groovy.version@
 org.gradle.daemon=true
 org.gradle.parallel=true
