--- a/build.gradle
+++ b/build.gradle
@@ -35,7 +35,7 @@ repositories {
 }
 
 dependencies {
-    implementation "org.codehaus.groovy:groovy:$groovyVersion"
+    // implementation "org.codehaus.groovy:groovy:$groovyVersion"
 }
 
 tasks.withType(Sign) {
