--- a/skeleton/build.gradle
+++ b/skeleton/build.gradle
@@ -18,13 +18,10 @@ repositories {
 
 configurations {
     developmentOnly
-    runtimeClasspath {
-        extendsFrom developmentOnly
-    }
 }
 
 dependencies {
-    developmentOnly("org.springframework.boot:spring-boot-devtools")
+    developmentOnly('org.springframework.boot:spring-boot-devtools')
 @dependencies@
 }
 
