--- a/features/markup-views/feature.yml
+++ b/features/markup-views/feature.yml
@@ -4,6 +4,6 @@ build:
         - org.graceframework.plugins.views-markup
 dependencies:
     - scope: build
-      coords: "org.graceframework.plugins:views-gradle:6.0.0-M2"
+      coords: "org.graceframework.plugins:views-gradle:@grace-views.version@"
     - scope: compile
       coords: "org.graceframework.plugins:views-markup"
