--- a/features/hibernate5/feature.yml
+++ b/features/hibernate5/feature.yml
@@ -5,10 +5,12 @@ dependencies:
     - scope: compile
       coords: "org.hibernate:hibernate-core:5.6.15.Final"
     - scope: runtime
-      coords: 'org.glassfish.web:el-impl:2.2.1-b05'
-    - scope: runtime
       coords: "com.h2database:h2"
     - scope: runtime
       coords: "org.apache.tomcat:tomcat-jdbc"
     - scope: runtime
-      coords: 'javax.xml.bind:jaxb-api:2.3.1'
+      coords: 'jakarta.xml.bind:jakarta.xml.bind-api:2.3.3'
+    - scope: runtime
+      coords: 'jakarta.el:jakarta.el-api:3.0.3'
+    - scope: runtime
+      coords: 'org.glassfish:jakarta.el:3.0.4'
