Define project version in gradle.properties

--- a/skeleton/gradle.properties
+++ b/skeleton/gradle.properties
@@ -1,5 +1,6 @@
 graceVersion=@grails.version@
 groovyVersion=@groovy.version@
+version=0.0.1-SNAPSHOT
 org.gradle.daemon=true
 org.gradle.parallel=true
 org.gradle.jvmargs=-Dfile.encoding=UTF-8 -Xmx1024M
