Update skeleton: use java toolchain 17

--- a/skeleton/build.gradle
+++ b/skeleton/build.gradle
@@ -18,7 +18,9 @@ dependencies {
 }
 
 java {
-    sourceCompatibility = '17'
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(17)
+    }
 }
 
 tasks.withType(Jar) {
