--- a/skeleton/app/conf/application.yml
+++ b/skeleton/app/conf/application.yml
@@ -29,6 +29,10 @@ spring:
                 - '**/*.gson'
                 - 'logback.groovy'
                 - '*.properties'
+    jpa:
+        open-in-view: false
+    liquibase:
+        enabled: false
 environments:
     development:
         management:
