Use `gradlePluginPortal()` instead
Closes gh-2

--- a/profile.yml
+++ b/profile.yml
@@ -7,8 +7,7 @@ repositories:
 build:
     repositories:
         - "mavenCentral()"
-        - "https://plugins.gradle.org/m2/"
-        - "https://repo.gradle.org/gradle/libs-releases"
+        - "gradlePluginPortal()"
     plugins:
         - eclipse
         - idea
